--- a/lesson1.ipynb
+++ b/lesson1.ipynb
@@ -118,7 +118,7 @@
       "cell_type": "code",
       "source": [
         "def greedy_coins(value):\n",
-        "    coins = [10, 5, 2, 1]\n",
+        "    coins = [50,10, 5, 2, 1]\n",
         "    result = []\n",
         "    for coin in coins:\n",
         "        while value >= coin:\n",
@@ -126,22 +126,22 @@
         "            result.append(coin)\n",
         "    return result\n",
         "\n",
-        "print(greedy_coins(20))  # Output: [10, 5, 2, 1]\n"
+        "print(greedy_coins(2520))  # Output: [10, 5, 2, 1]"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "sP0iKO2hZ78o",
-        "outputId": "3626a94c-07de-4056-9df6-c3106a955be5"
+        "outputId": "346c0f4d-63cf-4d23-ff5c-7f05a3fed9ad"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[10, 10]\n"
+            "[50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 50, 10, 10]\n"
           ]
         }
       ]
