--- a/lesson1.ipynb
+++ b/lesson1.ipynb
@@ -135,7 +135,7 @@
         "id": "sP0iKO2hZ78o",
         "outputId": "346c0f4d-63cf-4d23-ff5c-7f05a3fed9ad"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,19 +204,19 @@
         "    for i in range(2, int(n ** 0.5) + 1):  # Check from 2 to sqrt(n)\n",
         "        if n % i == 0:\n",
         "            return False  # If divisible, not prime\n",
-        "    return True  # Otherwise, it's prime!\n"
+        "    return True  # Otherwise, it's prime!"
       ],
       "metadata": {
         "id": "Zj7nPcTofJ8S"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Test it\n",
-        "number = 13\n",
+        "number = 2312250326011105\n",
         "if is_prime(number):\n",
         "    print(f\"{number} is a Prime Number ✅\")\n",
         "else:\n",
@@ -227,15 +227,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Fqx2y0O7gYbW",
-        "outputId": "329d7e2b-95cf-4f6d-fdbd-5a607b69bf14"
+        "outputId": "4a2c1907-673e-4ef8-bfb6-da65fbdf5b8f"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "13 is a Prime Number ✅\n"
+            "2312250326011105 is Not a Prime Number ❌\n"
           ]
         }
       ]
